deployment2.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloakdb-service
  labels:
    app: keycloakdb
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: keycloakdb
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloakdb-deployment
  labels:
    app: keycloakdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloakdb
  template:
    metadata:
      labels:
        app: keycloakdb
    spec:
      containers:
        - name: keycloakdb
          image: postgres:latest
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: keycloakdb-storage
      restartPolicy: Always
      volumes:
        - name: keycloakdb-storage
          persistentVolumeClaim:
            claimName: postgres-volume-claim
status: {}
---
#KEYCLOAK APP
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  selector:
    app: identity-keycloak
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8180
      targetPort: 8180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-keycloak
  template:
    metadata:
      labels:
        app: identity-keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:13.0.1
          command:
            - ./scripts/keycloak_migration/keycloak-entrypoint.sh
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: keycloakdb-storage
---
apiVersion: v1
kind: Service
metadata:
  name: demodb-service
spec:
  selector:
    app: demodb
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demodb
  template:
    metadata:
      labels:
        app: demodb
    spec:
      containers:
        - name: demodb
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: demodb-storage
          volumes:
            - name: demodb-storage
              persistentVolumeClaim:
                claimName: demodb-volume-claim
---
#JAVA BACKEND
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-backend
          image: sphokuhle/demo:latest
